--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ FFF__EXECUTION__ORDER_TIMEOUT_SECS=30
 
 # Logging (optional)
 RUST_LOG=info
+
+# AWS stuff
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_REGION=ap-northeast-2
