--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ dotenvy = "0.15"
 # Logging & tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-appender = "0.2"
 
 # Error handling
 thiserror = "2.0"
